<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontier_exploration</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="126231924+Nyanziba@users.noreply.github.com">kaya</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
